Themes: Fixed overflowing title

--- a/themes/uncomplicated.less
+++ b/themes/uncomplicated.less
@@ -89,13 +89,6 @@ body > .WMPanel > ul {
 }
 .Window > .WindowTop > .WindowIcon,
 .Window > .WindowTop > .WindowTitle {
-  position : relative;
-  top : auto;
-  left : auto;
-  right : auto;
-  height : auto;
-  display : inline-block;
-  vertical-align : middle;
 }
 .Window > .WindowTop > .WindowTitle {
   text-align : center;
